# nndraw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
docs/: goals.md  plan.md  session_handoff.md
src/nndraw/: __main__.py
src/nndraw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/nndraw/db/: point_store.py
src/nndraw/linalg/: matrix.py  vector.py
src/nndraw/nn/: activation.py  activations.py  layer.py  network.py
src/nndraw/ui/: canvas.py  config.py  coords.py  input_handler.py  label.py  point_request.py
tests/db/: test_point_store.py
tests/linalg/: test_matrix.py  test_vector.py
tests/nn/: test_activations.py  test_layers.py  test_network.py
tests/ui/: test_config.py
