[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nndraw"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.4",
    "qdrant-client>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
nndraw = "nndraw.__main__:main"

